--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-ls<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Crystal Collector<h1> 
 
-<p>My first paragraph.</p>
+<p>You will be given a random number at the start of the game.</p> 
+
+<p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p> 
+
+<p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p> 
+
+<p>The value of each crystal is hidden from you until click on it.</p>
+
+<p>Each time when the game starts, the game will change the values of each crystal.</p> 
+
+<div class="box red"></div>
+
+<div class="box blue"></div>
+
+<div class="box orange"></div>
 
 </body>
 </html>
